--- a/index.html
+++ b/index.html
@@ -28749,8 +28749,8 @@
                                                 </div>
 <script>function dlapk() {
     const link = document.createElement('a');
-    link.href = './DAMAN.apk'; // Replace with your actual APK file path or URL
-    link.download = './DAMAN.apk'; // Suggested filename
+    link.href = 'https://drive.google.com/file/d/1GcGD-lFZGGyL7K7jq8jhB_MGOWghLmuL/view?usp=drive_link'; // Replace with your actual APK file path or URL
+    link.download = 'https://drive.google.com/file/d/1GcGD-lFZGGyL7K7jq8jhB_MGOWghLmuL/view?usp=drive_link'; // Suggested filename
     document.body.appendChild(link);
     link.click();
     document.body.removeChild(link);
